# python-project-50

./: .coverage  .gitignore  F3.json  F4.json  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml  pyci.yml
gendiff/: Makefile  gendiff.py  gendiff_engine.py  gendiff_info.py  gendiff_json.py  gendiff_parse.py  stylize.py  test.py  uniform.py  yaml_gendiff.py
gendiff/scripts/: gendiff_script.py
gendiff/styles/: plain.py  regular.py  style_json.py  style_regular.py
style/: stylize.py
styles/: style_json.py  style_plain.py  style_regular.py
stylish/: stylize.py
tests/: test_gendiff.py
tests/fixtures/: test_default_format_3_4  test_default_format_4_3  test_default_format_5_6  test_default_format_7_8  test_default_format_8_7  test_default_format__10_9  test_default_format__11_12  test_default_format__12_11  test_json_format.json  test_permanent_diff  test_plain_format_3_4  test_plain_format_4_3  test_plain_format_7_8  test_plain_format_8_7  test_plain_format__10_9  test_plain_format__11_12  test_plain_format__12_11
tests/fixtures/json/: file7.json  file8.json  file_11.json  file_12.json  json_regular.json  json_same_value.json  json_unique.json
tests/fixtures/yaml/: file2.yml  file7.yaml  file8.yml  file_11.yaml  file_12.yml
