[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Safar Galimzyanov <you@example.com>"]
readme = "README.md"
packages = [
	{ include = "gendiff" },
	{ include = "tests"}
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
